--- a/tarif.html
+++ b/tarif.html
@@ -867,12 +867,11 @@
                     <img src="images/dostup-border-img2.svg" alt="">
                   </div>
                 </div>
-               
-                <div class="dostup-border-price2 dostup-border-price2-mobile">
+                <div class="dostup-border-price2 dostup-border-price2-pd">
+                  <p class="tarif-price">24 000</p> ₽<span>/год</span>
                   <div class="dostup-border-price-absolute">
                     Тех. поддержка - 50000 руб.
                   </div>
-                  <p class="tarif-price">24 000</p> ₽<span>/год</span>
                 </div>
                 <div class="dostup-border-inner">
                   <div class="dostup-border-inner-title">
@@ -908,7 +907,7 @@
                     </button>
                   </div>
                   <div class="dostup-border-button3">
-                    <button class="btn js-show-modal" data-modal="13">
+                    <button class="btn js-show-modal" data-modal="8">
                       Оформить тариф
                     </button>
                   </div>
@@ -2711,7 +2710,7 @@
               <div class="modal-inner2-border">
                 <div class="modal-inner2-text">
                   <div class="modal-inner2-title2">
-                    Корпоративный
+                    Облачный
                   </div>
                   <div class="modal-inner2-img">
                     <img src="images/modal-inner2-img.svg" alt="">
@@ -2810,6 +2809,132 @@
       </div>
     </div>   
 
+    <div class="modal js-modal" data-modal="8">
+      <div class="modal__inner modal-border">
+        <div class="modal-border-new">
+          <div class="modal-close-button">
+            <button class="button-close-modal js-close-modal">
+              Закрыть
+              <img class="js-close-modal" src="images/modal-close-button.svg" alt="">
+            </button>
+          </div>
+          <div class="modal-border-new-pd">
+          <div class="modal-border-new-img">
+            <img src="images/modal-border-new-img.svg" alt="">
+          </div>
+          <div class="modal-border-new-title">
+            Оформление тарифа
+          </div>
+          </div>
+          <div class="modal-border-new-pd">
+            <div class="modal-title-new">
+              Предварительный состав заказа:
+            </div>
+          </div>
+          <div class="modal-inner2-pd">
+            
+            <div class="modal-inner2-block">
+              <div class="modal-inner2-border">
+                <div class="modal-inner2-text">
+                  <div class="modal-inner2-title2">
+                    Доступный
+                  </div>
+                  <div class="modal-inner2-img">
+                    <img src="images/modal-inner2-img.svg" alt="">
+                  </div>
+                </div>
+                <div class="modal-inner2-suptitle">
+                  Тариф
+                </div>
+              </div>
+            </div>
+            <div class="modal-inner2-block">
+              <div class="modal-inner2-border">
+                <div class="modal-inner2-text">
+                  <div class="modal-inner2-title2 members">
+                    35
+                  </div>
+                  <div class="modal-inner2-img">
+                    <img src="images/modal-inner2-img2.svg" alt="">
+                  </div>
+                </div>
+                <div class="modal-inner2-suptitle">
+                  Количество участников
+                </div>
+              </div>
+            </div>
+            <div class="modal-inner2-block">
+              <div class="modal-inner2-border support">
+                <div class="modal-inner2-text">
+                  <div class="modal-inner2-title2">
+                    Включена
+                  </div>
+                  <div class="modal-inner2-img">
+                    <img src="images/modal-inner2-img3.svg" alt="">
+                  </div>
+                </div>
+                <div class="modal-inner2-suptitle">
+                  Расширенная поддержка
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-border-new-pd">
+            <div class="modap-price">
+              <div class="modap-price-title">
+                Итоговая стоимость:
+              </div>
+              <div class="modap-price-suptitle">
+                126 000 ₽
+              </div>
+            </div>
+            <div class="modap-title">
+              Заявка не предполагает оплату. После оформления заявки наш менеджер свяжется с Вами для уточнения деталей
+            </div>
+          </div>
+          <div class="vopros-wrap">
+              <div class="vopros-block">
+                <div class="vopros-suptitle">
+                  Ваше имя
+                </div>
+                <div class="vopros-input">
+                  <input type="text" size="40" placeholder="Например, Иван">
+                </div>
+              </div>
+              <div class="vopros-block">
+                <div class="vopros-suptitle">
+                  Номер Вашего телефона
+                </div>
+                <div class="vopros-input">
+                  <input type="text" size="40" placeholder="+7">
+                </div>
+              </div>
+              <div class="vopros-block">
+                <div class="vopros-suptitle">
+                  Ваш Email
+                </div>
+                <div class="vopros-input">
+                  <input type="text" size="40" placeholder="example@mail.ru">
+                </div>
+              </div>
+            </div>
+            <div class="modal-border-new-pd">
+              <div class="modal-inner">
+                <div class="vopros-inner-title vopros-inner-title-dp">
+                  Нажимая “Заказать”, я подтвержаю своё согласие на обработку персональных данных
+                </div>
+                <div class="vopros-inner-button vopros-inner-button-center">
+                  <button>Заказать тариф</button>
+                </div>
+                <div class="vopros-inner-title vopros-inner-title-mb vopros-inner-title-center">
+                  Нажимая “Заказать”, я подтвержаю своё согласие на обработку персональных данных
+                </div>
+              </div>
+            </div>
+        </div>
+
+      </div>
+    </div>   
 
     <div class="modal js-modal" data-modal="11">
       <div class="modal__inner modal-border">
@@ -2845,7 +2970,7 @@
               <div class="modal-inner2-border">
                 <div class="modal-inner2-text">
                   <div class="modal-inner2-title2">
-                    Корпоративный
+                    Вебинар
                   </div>
                   <div class="modal-inner2-img">
                     <img src="images/modal-inner2-img.svg" alt="">
