--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ TLS. Медиа данные - протоколом SRTP.
     <section class="dostup">
       <div class="container">
         <div class="dostup-zindex">
-          <div class="dostup-title">
+          <div class="dostup-title" >
             Ваш доступ - в один клик.
           </div>
           <div class="dostup-suptitle">
@@ -679,7 +679,7 @@ TLS. Медиа данные - протоколом SRTP.
                     <div class="dostup-border-border">
                       <img src="images/dostup-border-border.svg" alt="">
                     </div>
-                    <div class="dostup-border-number">
+                    <div class="dostup-border-number" >
                       10
                     </div>
                     <div class="dostup-border-border">
@@ -727,7 +727,7 @@ TLS. Медиа данные - протоколом SRTP.
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
@@ -788,7 +788,7 @@ TLS. Медиа данные - протоколом SRTP.
                   <div class="dostup-border-price-absolute">
                     Тех. поддержка - 50000 руб.
                   </div>
-                  <p class="tarif-price">126 000</p> ₽ <br class="br-mb"><span class="span-mb">/Бессрочная лицензия</span>
+                  <p class="tarif-price">66 000</p> ₽ <br class="br-mb"><span class="span-mb">/Бессрочная лицензия</span>
                 </div>
                 <div class="dostup-border-inner">
                   <div class="dostup-border-inner-title">
@@ -798,7 +798,7 @@ TLS. Медиа данные - протоколом SRTP.
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
@@ -866,7 +866,7 @@ TLS. Медиа данные - протоколом SRTP.
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
@@ -964,7 +964,7 @@ TLS. Медиа данные - протоколом SRTP.
                         <div class="dostup-border-border minus">
                           <img src="images/dostup-border-border3.svg" alt="">
                         </div>
-                        <div class="dostup-border-number2">
+                        <div class="dostup-border-number2" contenteditable="true">
                           10
                         </div>
                         <div class="dostup-border-border plus">
