--- a/tarif.html
+++ b/tarif.html
@@ -398,7 +398,7 @@
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
@@ -490,7 +490,7 @@
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
@@ -809,7 +809,7 @@
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
@@ -881,7 +881,7 @@
                     <div class="dostup-border-border minus">
                       <img src="images/dostup-border-border3.svg" alt="">
                     </div>
-                    <div class="dostup-border-number2">
+                    <div class="dostup-border-number2" contenteditable="true">
                       10
                     </div>
                     <div class="dostup-border-border plus">
